--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 	    zoom: 9 // starting zoom
 	});
         
+	    map.on('load', () => {
+	    map.addLayer({
+		id: 'terrain-data',
+		type: 'line',
+		source: {
+		    type: 'vector',
+		    url: 'mapbox://mapbox.mapbox-terrain-v2'
+		},
+		'source-layer': 'contour'
+	    });
+	});
 	 
         </script> 
 </body>
