--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
-
-<html>
+<html lang='en'>
 <head>
-    <meta charset="utf-8" />
-    <title>Mapa</title>
-    <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" 
-	  integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" 
-	  crossorigin="">
-    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" 
-	    integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" 
-	    crossorigin=""></script>
-    <script src=
-	"https://code.jquery.com/jquery-3.5.1.js">
-    </script>
+    <meta charset='utf-8' />
+    <title>Add custom markers in Mapbox GL JS</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css' rel='stylesheet' />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
 </head>
 <body>
-    <div id="map" style="height: 630px"></div>
-    <script>
-        mapboxgl.accessToken = '<your access token here>';
-	const map = new mapboxgl.Map({
-	    container: 'map', // container ID
-	    style: 'mapbox://styles/mapbox/streets-v12', // style URL
-	    center: [-74.5, 40], // starting position [lng, lat]
-	    zoom: 9 // starting zoom
-	});
-        
-	    map.on('load', () => {
-	    map.addLayer({
-		id: 'terrain-data',
-		type: 'line',
-		source: {
-		    type: 'vector',
-		    url: 'mapbox://mapbox.mapbox-terrain-v2'
-		},
-		'source-layer': 'contour'
-	    });
-	});
-	 
-        </script> 
+
+<div id='map'></div>
+
+<script>
+
+mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
+
+const map = new mapboxgl.Map({
+  container: 'map',
+  style: 'mapbox://styles/mapbox/light-v11',
+  center: [-96, 37.8],
+  zoom: 3
+});
+
+// code from the next step will go here!
+
+</script>
+
 </body>
 </html>
