--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
 mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
 
 const map = new mapboxgl.Map({
-  container: 'map',
-  style: 'mapbox://styles/mapbox/light-v11',
-  center: [-96, 37.8],
-  zoom: 3
+  url:"https://studio.mapbox.com/tilesets/chalito66.crhv72bl/#6.72/9.596/-83.891"
 });
 
 // code from the next step will go here!
