--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script>
 	var map = new L.Map('map').fitWorld();
 
-	var mb = L.tileLayer.mbTiles('Proyecto3.mbtiles', {
+	var mb = L.tileLayer.mbTiles('Terremotos.mbtiles', {
 		minZoom: 0,
 		maxZoom: 6
 	}).addTo(map);
