--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<script>
 	var map = new L.Map('map').fitWorld();
 
-	var mb = L.tileLayer.mbTiles('Terremotos.mbtiles', {
-		minZoom: 0,
-		maxZoom: 6
+	var mb = L.tileLayer.mbTiles('Proyecto3.mbtiles', {
+		minZoom: 6,
+		maxZoom: 14
 	}).addTo(map);
 
 	</script>
