--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@
 	<meta charset="UTF-8">
 	<title>MBTiles y Leaflet</title>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-	
+	<script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/sql.js@0.3.2/js/sql.js"></script>
+	<script src="./Leaflet.TileLayer.MBTiles.js"></script>
 	<style> 
   	#map {
    	width: 700px;
   	 height: 600px; }
 </style> 
 </head>  
-	<body>
-	 <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-	 <script src="https://unpkg.com/sql.js@0.3.2/js/sql.js"></script>
-	 <script src="./Leaflet.TileLayer.MBTiles.js"></script>
-
-		<div id ="map"> </div> 
+<body>
+	<div id ="map"> </div> 
 	<script>
-	var map = new L.Map('map').setView([9.7, -84], 8);;
+	var map = new L.Map('map').fitWorld();
 
-	var mb = L.tileLayer.mbTiles('Proyecto3.mbtiles', {
+	var mb = L.tileLayer.mbTiles('./Proyecto3.mbtiles', {
 		minZoom: 6,
 		maxZoom: 14
 	}).addTo(map);
 
 	</script>
-	</body> 
+</body> 
 </html> 
