--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
 <body>
 	<div id ="map"> </div> 
 	<script>
-	var map = new L.Map('map').fitWorld();
+		var map = new L.Map('map').fitWorld();
 
-	var mb = L.tileLayer.mbTiles('./Proyecto3.mbtiles', {
-		minZoom: 6,
-		maxZoom: 14
-	}).addTo(map);
-
+		var mb = L.tileLayer.mbTiles('./Proyecto3.mbtiles', {
+			minZoom: 6,
+			maxZoom: 14
+		}).addTo(map);
+	
+		mb.on('databaseloaded', function(ev) {
+			console.info('MBTiles DB loaded', ev);
+		});
+		mb.on('databaseerror', function(ev) {
+			console.info('MBTiles DB error', ev);
+		});
 	</script>
 </body> 
 </html> 
