--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script>
 		var map = new L.Map('map').fitWorld();
 
-		var mb = L.tileLayer.mbTiles('./Proyecto3.mbtiles', {
+		var mb = L.tileLayer.mbTiles('Proyecto3.mbtiles', {
 			minZoom: 6,
 			maxZoom: 14
 		}).addTo(map);
