--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<script src="./Leaflet.TileLayer.MBTiles.js"></script>
 	<style> 
   	#map {
-   	width: 700px;
   	 height: 600px; }
 </style> 
 </head>  
 <body>
+	<p> El proceso de carga del mapa puede tardar unos minutos</p>
 	<div id ="map"> </div> 
 	<script>
 		var map = new L.Map('map').setView([9.7, -84], 8);
