--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </style> 
 </head>  
 <body>
-	<center><b>Nota:</b><b style="color:blue"> El proceso de carga del mapa puede tardar unos minutos</b></center>
+	<center><font size=5><b>Nota:</b><b style="color:blue"> El proceso de carga del mapa puede tardar unos minutos</b></font></center>
 	<div id ="map"> </div> 
 	<script>
 		var map = new L.Map('map').setView([9.7, -84], 8);
