--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html>
 <head> 
 	<meta charset="UTF-8">
-	<title>MBTiles y Leaflet</title>
+	<title>Proyecto 3 - SIG</title>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 	<script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
 	<script src="https://unpkg.com/sql.js@0.3.2/js/sql.js"></script>
