--- a/index.html
+++ b/index.html
@@ -41,25 +41,32 @@
 				      '#FFEDA0';
 		}
 		
-		var legend = L.control({position: 'bottomright'});
+		<span style='color:#FFFF00'>━</span> Carreteras<br />
+		<span style='color:#C0C0C0'>━</span> Otras Calles <br />
+		<span style='color:#E0E0E0'>┉</span> Senderos <br />
+		<span style='color:#CC6600'>━</span> Div. Distrito <br />
+		<span style='color:#CEF6F5'>┉</span> Ríos <br />
+		<span style='color:#00BFFF'>▉</span> Lagunas
+		
+// 		var legend = L.control({position: 'bottomright'});
 
-		legend.onAdd = function (map) {
+// 		legend.onAdd = function (map) {
 
-		    var div = L.DomUtil.create('div', 'info legend'),
-			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
-			labels = [];
+// 		    var div = L.DomUtil.create('div', 'info legend'),
+// 			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+// 			labels = [];
 
-		    // loop through our density intervals and generate a label with a colored square for each interval
-		    for (var i = 0; i < grades.length; i++) {
-			div.innerHTML +=
-			    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
-			    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
-		    }
+// 		    // loop through our density intervals and generate a label with a colored square for each interval
+// 		    for (var i = 0; i < grades.length; i++) {
+// 			div.innerHTML +=
+// 			    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+// 			    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+// 		    }
 
-		    return div;
-		};
+// 		    return div;
+// 		};
 
-		legend.addTo(map);
+// 		legend.addTo(map);
 	</script>
 </body> 
 </html> 
