--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
 		});
 		
 		
-		function getColor(d) {
-		    return d > 1000 ? '#800026' :
-			   d > 500  ? '#BD0026' :
-			   d > 200  ? '#E31A1C' :
-			   d > 100  ? '#FC4E2A' :
-			   d > 50   ? '#FD8D3C' :
-			   d > 20   ? '#FEB24C' :
-			   d > 10   ? '#FED976' :
-				      '#FFEDA0';
-		}
+// 		function getColor(d) {
+// 		    return d > 1000 ? '#800026' :
+// 			   d > 500  ? '#BD0026' :
+// 			   d > 200  ? '#E31A1C' :
+// 			   d > 100  ? '#FC4E2A' :
+// 			   d > 50   ? '#FD8D3C' :
+// 			   d > 20   ? '#FEB24C' :
+// 			   d > 10   ? '#FED976' :
+// 				      '#FFEDA0';
+// 		}
 		
 		
 		
-// 		var legend = L.control({position: 'bottomright'});
+ 		var legend = L.control({position: 'bottomright'});
 
+		legend.onAdd = {
+			"<span style='color:#FFFF00'>━</span> Carreteras<br /> + <span style='color:#C0C0C0'>━</span> Otras Calles <br /> + <span style='color:#E0E0E0'>┉</span> Senderos <br /> + <span style='color:#CC6600'>━</span> Div. Distrito <br /> + <span style='color:#CEF6F5'>┉</span> Ríos <br /> + <span style='color:#00BFFF'>▉</span> Lagunas"
+		};
+		
 // 		legend.onAdd = function (map) {
 
 // 		    var div = L.DomUtil.create('div', 'info legend'),
