--- a/index.html
+++ b/index.html
@@ -30,23 +30,32 @@
 		});
 		
 		
-// 		function getColor(d) {
-// 		    return d > 1000 ? '#800026' :
-// 			   d > 500  ? '#BD0026' :
-// 			   d > 200  ? '#E31A1C' :
-// 			   d > 100  ? '#FC4E2A' :
-// 			   d > 50   ? '#FD8D3C' :
-// 			   d > 20   ? '#FEB24C' :
-// 			   d > 10   ? '#FED976' :
-// 				      '#FFEDA0';
-// 		}
+		function getColor(d) {
+		    return d > 1000 ? '#800026' :
+			   d > 500  ? '#BD0026' :
+			   d > 200  ? '#E31A1C' :
+			   d > 100  ? '#FC4E2A' :
+			   d > 50   ? '#FD8D3C' :
+			   d > 20   ? '#FEB24C' :
+			   d > 10   ? '#FED976' :
+				      '#FFEDA0';
+		}
 		
 		
 		
  		var legend = L.control({position: 'bottomright'});
 
 		legend.onAdd = {
-			"<span style='color:#FFFF00'>━</span> Carreteras<br /> + <span style='color:#C0C0C0'>━</span> Otras Calles <br /> + <span style='color:#E0E0E0'>┉</span> Senderos <br /> + <span style='color:#CC6600'>━</span> Div. Distrito <br /> + <span style='color:#CEF6F5'>┉</span> Ríos <br /> + <span style='color:#00BFFF'>▉</span> Lagunas"
+			var div = L.DomUtil.create('div', 'info legend'),
+			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+			labels = [];
+
+		    // loop through our density intervals and generate a label with a colored square for each interval
+		    for (var i = 0; i < grades.length; i++) {
+			div.innerHTML +=
+			    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+			    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+		    }
 		};
 		
 // 		legend.onAdd = function (map) {
