--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 		    }
 		};
 		
+		legend.addTo(map);
+		
 // 		legend.onAdd = function (map) {
 
 // 		    var div = L.DomUtil.create('div', 'info legend'),
