--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
 				      '#FFEDA0';
 		}
 		
-		
-		
- 		var legend = L.control({position: 'bottomright'});
+		legend.onAdd = function (map) {
 
-		legend.onAdd = {
-			var div = L.DomUtil.create('div', 'info legend'),
+		    var div = L.DomUtil.create('div', 'info legend'),
 			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
 			labels = [];
 
@@ -56,27 +53,11 @@
 			    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
 			    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
 		    }
+
+		    return div;
 		};
-		
+
 		legend.addTo(map);
-		
-// 		legend.onAdd = function (map) {
-
-// 		    var div = L.DomUtil.create('div', 'info legend'),
-// 			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
-// 			labels = [];
-
-// 		    // loop through our density intervals and generate a label with a colored square for each interval
-// 		    for (var i = 0; i < grades.length; i++) {
-// 			div.innerHTML +=
-// 			    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
-// 			    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
-// 		    }
-
-// 		    return div;
-// 		};
-
-// 		legend.addTo(map);
 	</script>
 	<span style='color:#FFFF00'>━</span> Carreteras<br />
 	<span style='color:#C0C0C0'>━</span> Otras Calles <br />
