--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 				      '#FFEDA0';
 		}
 		
+		var legend = L.control({position: 'bottomright'});
+		
 		legend.onAdd = function (map) {
 
 		    var div = L.DomUtil.create('div', 'info legend'),
