--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
 	<script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
 	<script src="https://unpkg.com/sql.js@0.3.2/js/sql.js"></script>
 	<script src="./Leaflet.TileLayer.MBTiles.js"></script>
-	<style> 
+<style> 
   	#map {
   	 height: 600px; }
+	
+	.info {
+	    padding: 6px 8px;
+	    font: 14px/16px Arial, Helvetica, sans-serif;
+	    background: white;
+	    background: rgba(255,255,255,0.8);
+	    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	    border-radius: 5px;
+	}
+	.info h4 {
+	    margin: 0 0 5px;
+	    color: #777;
+	}
+	
+	.legend {
+	    line-height: 18px;
+	    color: #555;
+	}
+	.legend i {
+	    width: 18px;
+	    height: 18px;
+	    float: left;
+	    margin-right: 8px;
+	    opacity: 0.7;
+	}
 </style> 
 </head>  
 <body>
