--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 			labels = [];
 
 		div.innerHTML =
-			"<span style='color:#FFFF00'>━</span> Carreteras<br />" +
-			"<span style='color:#C0C0C0'>━</span> Otras Calles <br />" +
-			"<span style='color:#E0E0E0'>┉</span> Senderos <br />" +
-			"<span style='color:#CC6600'>━</span> Div. Distrito <br />" +
-			"<span style='color:#CEF6F5'>┉</span> Ríos <br />" +
-			"<span style='color:#00BFFF'>▉</span> Lagunas'"
+			"<span style='color:#FFFF00; font-size: 20px;'>━</span> Carreteras<br />" +
+			"<span style='color:#C0C0C0; font-size: 20px;'>━</span> Otras Calles <br />" +
+			"<span style='color:#E0E0E0; font-size: 20px;'>┉</span> Senderos <br />" +
+			"<span style='color:#CC6600; font-size: 20px;'>━</span> Div. Distrito <br />" +
+			"<span style='color:#CEF6F5; font-size: 20px;'>┉</span> Ríos <br />" +
+			"<span style='color:#00BFFF; font-size: 20px;'>▉</span> Lagunas"
 
 		    return div;
 		};
